--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
         <ul>
            <li><a href="https://twitter.com/Mohamed_asif__">Twitter</a></li> 
         </ul>
-        <h3><a href="D:\web development\HTML personal site\contact.html">Contact Me</a></h3>
+        <h3><a href="contact.html">Contact Me</a></h3>
     </body>
 </html>
