--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"> 
         <title>Asif's Personanl Site</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <table cellspacing="20">
